# four-path-mlx

./: .gitignore  LICENSE  README.md  amx_drafter.py  four_path_server.py  gdn_drafter.py  ngram_cascade.py  pyproject.toml
benchmarks/: all_paths.py  four_path.py  multicheck.py  ngram_standalone.py  orchestrator.py  realworld.py  s1.py  stress.py  ten_k.py  three_path.py  wallclock.py
benchmarks/results/: 10k_results.json  all_paths_results.json  benchmark_results.json  four_path_results.json  multicheck_results.json  orchestrator_results.json  realworld_results.json  s1_results.json  three_path_results.json  wallclock_results.json
benchmarks/samples/10k/: boa-10k.txt  citi-10k.txt  gs-10k.txt  jpm-10k.txt
benchmarks/samples/s1/: chime-s1.txt  instacart-s1.txt  klaviyo-s1.txt  reddit-s1.txt
docs/: benchmark_card.html
four_path/: __init__.py  ane_convert.py  ane_sync.py  generate.py  mtp_patch.py  multicheck.py  ngram.py  orchestrator.py  self_spec.py  self_spec_batched.py  three_path.py
server/: server.py
validation/: README.md  gate_zero.py  gate_zero_output.txt  gate_zero_results.json
